--- a/css/codeme.css
+++ b/css/codeme.css
@@ -1,222 +1,66 @@
-*{
-	margin: 0px;
-	padding: 0px;
-	box-sizing: border-box;
-	/* border: solid 1px red;b */
-}
-
-body {
-	background-image: url("../images/translogo.png");
-}
-
-header {
-	display: flex;
-	width: 100%;
-	height: 140px;
-	background-image: url("../images/translogo.png");
-	/* position: relative; */
-
-}
-
-header img {
-	width: 100px;
-	height: auto;
-	/* position: absolute; */
-	margin-top: 20px;
-	margin-left: 20px;
-}
-
-header h1 {
-	position: absolute;
-	margin-left: 500px;
-	top: 50px; 
-	font-family: Exotc350 DmBd BT;
-	color: red;
-	font-size: 28px;
-	letter-spacing: 15px; 
-
-}
-
-#hminav a {
-	color: #fff;
-	background: #000033;
-	display: block;
-	/* height: 60px; */
-	font-family: Exotc350 Dmbd BT;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	text-decoration: none;
-	transition: background 0.45s;
-	padding: 14px 16px;
-}
-
-#hminav a:hover {
-	background: red;
-}
-
-#hminav ul {
-	list-style: none;
-	display: flex;
-}
-
-#hminav li {
-	width: 150%;
-	text-align: center; 
-	position: relative;
-}
-
-#hminav li:hover .submenu > li {	
-	display: block;
-	top: 0px;
-}
-
-.submenu li {
-	display: none;
-	position: absolute;
-	top: 0px;
-	text-align: left;
-}
-
-.submenu {
-	display: flex;
-	flex-direction: column;
-	position: absolute;
-	width: 100%;
-}
-
-.arrow {
-	font-size: 10px;
-	left: 6px;
-}
-
-div.firstpic {
-/*	position: relative;
-*/	display: flex;
-	/* margin-top: 40px; */
-	height: 730px;
-	width: 100%;
-	background-image: url("../images/picture.jpg");
-	background-repeat: no-repeat;
-	background-size: cover; 
-	/*border: solid 1px red;*/
-	flex-direction: column;
-	align-items: center; 
-
-
-}
-
-div.h1p {
-	display: flex;
-	flex-direction: column;
-	align-items: stretch;
-	justify-content: center;
-	/*border: solid 1px red;*/
-	background: rgba(38,38,38,0.5);
-	margin-top: 400px;
-	width: 1000px;
-	height: 200px;
-	margin-bottom: 50px
-
-
-}
-
-div.h1p h1 {
-	text-align: center;
-	font-size: 35px;
-	font-family: Exotc350 DmBd BT;
-	color: white;
-
-}
-div.h1p p {
-	text-align: center;
-	font-size: 30px; 
-	color: white;
-	font-family: ErasDemiITC;
-	line-height: 40px;
-}
-
-#learn {
-	font-family: Exotc350 DmBd BT;
-	font-size: 20px;
-	color: white;
-	font-weight: bolder;
-}
-
-div.methonav {
-	display: flex;
-	flex-flow: row no-wrap;
-	/*border: solid 1px red;*/
-	align-items: center;
-}
-
-div.methonav a {
-	color: white;
-	padding: 0px 8px;
-	font-family: calibri;
-	font-size: 16px;
-	text-decoration: none;
-	font-weight: bolder;
-	color: #ffcc00;
-	text-transform: uppercase;
-	border-right: solid 2px white;
-}
-
-#last {
-	border: none;
-}
-
-div.methonav a:hover {
-	text-decoration: underline;
-}
-div.codeme {
-	width:100%;
+div.codemewrapper {
+	width: 319px;
 	height: auto;
 	display: flex;
 	justify-content: center;
-    flex-direction: column;
+  flex-direction: column;
 	align-items: center;
 	/* border: 1px solid red; */
-	padding: 20px 0 40px 0; 
-
+	/* padding: 0 0 40px 0;  */
+	margin: 0 auto;
 }
 
+
 div.piccodeme {
-    width: 950px;
-    height: 650px;
+  width: 70%;
+  height: 150px;
 	background-image: url("../images/FYN13.JPG");
-	background-size: cover;
+	background-size: contain;
+	background-repeat: no-repeat;
 	background-position: center;
 	/* border: 1px solid red; */
 	display: flex;
 	justify-content: center;
-
+	margin: 0 auto;
+	position: relative;
+	margin-top: 10px;
 }
 
-div.ppiccodeme {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	/*border: solid 1px red;*/
-	background: rgba(0,0,0,0.5);
-	margin-top: 460px;
-	width: 300px;
-	height: 100px;
-	/* margin-bottom: 50px */
-}
-
-div.ppiccodeme p {
+div.projectimg {
+	position: absolute;
+	width: 10%;
+	height: 20px;
+	background-image: url("../images/project.jpg");
+	background-size: cover;
+	/* background-repeat: no-repeat; */
+	background-position: center;
 	/* border: 1px solid red; */
-	font-size: 50px;
-	font-family: Copperplate Gothic;
+	display: flex;
+	justify-content: center;
+	left: 5px;
+	top: 5px;
+}
+
+div.piccodeme h1 {
+	background: rgba(0,0,0,0.5);
+	width: 38%;
+	font-size: 14px;
+	font-family: calibri;
 	font-weight: bold;
 	color: white;
+	text-align: center;
+	/* padding: 3px; */
+	position: absolute;
+	top: 120px;
+	/* border: 1px solid red; */
+	letter-spacing: 3px;
 
 }
 
 div.textcodeme {
-	width: 950px;
-    height: auto;
+	width: 70%;
+	height: auto;
+	margin: 0 auto;
 
 }
 div.textcodeme h2 {
@@ -225,119 +69,452 @@ div.textcodeme h2 {
 	padding: 30px 0 10px 0;
 	color: #000033;
 	text-decoration: underline;
+	font-size: 18px;
 }
 
 div.textcodeme p {
 	font-family: calibri;
 	color: #252525;
-	line-height: 22px;
-	font-size: 17px; 
+	line-height: 23px;
+	font-size: 16px; 
 	text-align: justify;
 	/* padding: 0 80px 0 80px; */
 }
 
 
-footer {
-	/* display: flex; */
-	background: #252525;
-	height: 430px;
-	width: 100%;
+
+@media (min-width:320px) and (max-width:479px) {
+	div.codemewrapper {
+		width: 478px;
+		height: auto;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		/* border: 1px solid red; */
+		margin: 0 auto;
+	}
+	
+header {
+	width: 20%;
 }
 
-div.footercontainer {
-	display: flex;
-	width: 1140px;
-	height: 354px;
-	margin: 0px 113px;
-	padding: 80px 15px 0px;
-	/* border: solid 1px red; */
+	div.piccodeme {
+		width: 70%;
+		height: 250px;
+		background-image: url("../images/FYN13.JPG");
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+		margin: 0 auto;
+		position: relative;
+		margin-top: 20px;
+	}
+	
+	div.projectimg {
+		position: absolute;
+		width: 12%;
+		height: 40px;
+		background-image: url("../images/project.jpg");
+		background-size: cover;
+		/* background-repeat: no-repeat; */
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+		left: 7px;
+		top: 7px;
+	}
+	
+	div.piccodeme h1 {
+		background: rgba(0,0,0,0.5);
+		width: 30%;
+		font-size: 18px;
+		font-family: calibri;
+		font-weight: bold;
+		color: white;
+		text-align: center;
+		/* padding: 3px; */
+		position: absolute;
+		top: 200px;
+		/* border: 1px solid red; */
+		letter-spacing: 3px;
+	
+	}
+	
+	div.textcodeme {
+		width: 70%;
+		height: auto;
+	
+	}
+	div.textcodeme h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+		font-size: 18px;
+	}
+	
+	div.textcodeme p {
+		font-family: calibri;
+		color: #252525;
+		line-height: 23px;
+		font-size: 15px; 
+		text-align: justify;
+		/* padding: 0 80px 0 80px; */
+	}
+	
+	
+	
+}
 
-} 
+@media (min-width:480px) and (max-width: 767px) {
+	div.codemewrapper {
+		width: 766px;
+		height: auto;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		/* border: 1px solid red; */
+		margin: 0 auto;
+	}
+	
+	div.piccodeme {
+		width: 70%;
+		height: 370px;
+		background-image: url("../images/FYN13.JPG");
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+		margin: 0 auto;
+		position: relative;
+		margin-top: 20px;
+	}
+	
+	div.projectimg {
+		position: absolute;
+		width: 10%;
+		height: 50px;
+		background-image: url("../images/project.jpg");
+		background-size: cover;
+		/* background-repeat: no-repeat; */
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+		left: 7px;
+		top: 7px;
+	}
+	
+	div.piccodeme h1 {
+		background: rgba(0,0,0,0.5);
+		width: 30%;
+		font-size: 33px;
+		font-family: calibri;
+		font-weight: bold;
+		color: white;
+		text-align: center;
+		/* padding: 3px; */
+		position: absolute;
+		top: 300px;
+		/* border: 1px solid red; */
+		letter-spacing: 3px;
+	
+	}
+	
+	div.textcodeme {
+		width: 70%;
+		height: auto;
+		margin-bottom: 20px
+	
+	}
+	div.textcodeme h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+		font-size: 18px;
+	}
+	
+	div.textcodeme p {
+		font-family: calibri;
+		color: #252525;
+		line-height: 23px;
+		font-size: 15px; 
+		text-align: justify;
+		/* padding: 0 80px 0 80px; */
+	}
+	
+	
+	
+}
 
-div.littleabout {
-	display: flex;
-	flex-direction: column;
-	width: 285px;
-	height: 265px;
-	padding: 0px 15px;
-	/* border: solid 1px red; */
-	/* align-items: flex-start; */
+@media (min-width:768px) and (max-width: 1023px) {
+	div.codemewrapper {
+		width: 1022px;
+		height: auto;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		/* border: 1px solid red; */
+		margin: 0 auto;
+	}
+	
+	div.piccodeme {
+		width: 70%;
+		height: 500px;
+		background-image: url("../images/FYN13.JPG");
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+		margin: 0 auto;
+		position: relative;
+		margin-top: 20px;
+	}
+	
+	div.projectimg {
+		position: absolute;
+		width: 10%;
+		height: 70px;
+		background-image: url("../images/project.jpg");
+		background-size: cover;
+		/* background-repeat: no-repeat; */
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+		left: 7px;
+		top: 7px;
+	}
+	
+	div.piccodeme h1 {
+		background: rgba(0,0,0,0.5);
+		width: 30%;
+		font-size: 40px;
+		font-family: calibri;
+		font-weight: bold;
+		color: white;
+		text-align: center;
+		/* padding: 3px; */
+		position: absolute;
+		top: 380px;
+		/* border: 1px solid red; */
+		letter-spacing: 3px;
+	
+	}
+	
+	div.textcodeme {
+		width: 70%;
+		height: auto;
+		margin-bottom: 20px
+	
+	}
+	div.textcodeme h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+		font-size: 18px;
+	}
+	
+	div.textcodeme p {
+		font-family: calibri;
+		color: #252525;
+		line-height: 23px;
+		font-size: 15px; 
+		text-align: justify;
+		/* padding: 0 80px 0 80px; */
+	}
+	
+	
+	
+}
+
+@media (min-width:1024px) and (max-width: 1366px) {
+	div.codemewrapper {
+		width: 1365px;
+		height: auto;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		/* border: 1px solid red; */
+		margin: 0 auto;
+		margin-top: 30px;
+	}
+	
+	div.piccodeme {
+		width: 70%;
+		height:650px;
+		background-image: url("../images/FYN13.JPG");
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+		margin: 0 auto;
+		position: relative;
+		margin-top: 20px;
+	}
+	
+	div.projectimg {
+		position: absolute;
+		width: 10%;
+		height: 85px;
+		background-image: url("../images/project.jpg");
+		background-size: cover;
+		/* background-repeat: no-repeat; */
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+		left: 7px;
+		top: 7px;
+	}
+	
+	div.piccodeme h1 {
+		background: rgba(0,0,0,0.5);
+		width: 30%;
+		font-size: 55px;
+		font-family: calibri;
+		font-weight: bold;
+		color: white;
+		text-align: center;
+		/* padding: 3px; */
+		position: absolute;
+		top: 520px;
+		/* border: 1px solid red; */
+		letter-spacing: 3px;
+	
+	}
+	
+	div.textcodeme {
+		width: 70%;
+		height: auto;
+		margin-bottom: 20px
+	
+	}
+	div.textcodeme h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+		font-size: 18px;
+	}
+	
+	div.textcodeme p {
+		font-family: calibri;
+		color: #252525;
+		line-height: 23px;
+		font-size: 15px; 
+		text-align: justify;
+		/* padding: 0 80px 0 80px; */
+	}
+	
+	
+	
+}
+
+@media (min-width:1367px) {
+	
+
+	div.codemewrapper {
+		width: 100%;
+		height: auto;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		/* border: 1px solid red; */
+		margin: 0 auto;
+		margin-top: 30px;
 
 	}
-
-div.links {
-	/* display: flex; */
-	/* flex-direction: column; */
-	width: 285px;
-	height: 265px;
-	padding: 0px 15px;
-	/* border: solid 1px red; */
-}
-
-div.downlogo {
-	display: flex;
-	flex-direction: column;
-	width: 285px;
-	height: 265px;
-	padding: 0px 15px;
-	/* border: solid 1px red; */
-	justify-content: center;
-	align-items: center;
-
-}
-footer img {
-	width: 200px;
-	height: auto;
-}
-
-div.contact {
-	display: flex;
-	flex-direction: column;
-	width: 285px;
-	height: 265px;
-	padding: 0px 15px;
-	/* border: solid 1px red; */
-}
-
-footer h1 {
-	font-family: Exotc350 DmBd BT;;
-	color: yellow;
-	font-size: 18px;
-	line-height: 40px;
-}
-footer a {
-	color: #e6e6e6;
-	font-family: calibri;
-	line-height: 25px;
-	font-size: 15px;
-	text-decoration: none;
-}
-
-footer a:hover {
-	background: red;
-}
-
-footer li {
-	width: 255px;
-	border-bottom: solid 1px #333333;
-	list-style: none;
-}
-
-footer p {
-	color: #e6e6e6;
-	font-family: calibri;
-	text-align: left;
-	font-size: 15px;
-	line-height: 20px;
-}
-
-div.copy {
-	/* border: solid 1px red; */
-	width: 100%;
-	display: flex;
-	align-items: flex-end;
-	height: 70px;
-	justify-content: center;
+	
+	div.piccodeme {
+		width: 70%;
+		height:750px;
+		background-image: url("../images/FYN13.JPG");
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+		margin: 0 auto;
+		position: relative;
+		margin-top: 20px;
+	}
+	
+	div.projectimg {
+		position: absolute;
+		width: 10%;
+		height: 100px;
+		background-image: url("../images/project.jpg");
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+		left: 350px;
+		top: 7px;
+	}
+	
+	div.piccodeme h1 {
+		background: rgba(0,0,0,0.5);
+		font-size: 45px;
+		font-family: calibri;
+		font-weight: bold;
+		color: white;
+		text-align: center;
+		/* padding: 3px; */
+		position: absolute;
+		top: 520px;
+		/* border: 1px solid red; */
+		letter-spacing: 3px;
+		width: 30%
+	
+	}
+	
+	div.textcodeme {
+		width: 70%;
+		height: auto;
+		margin-bottom: 20px
+	
+	}
+	div.textcodeme h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+		font-size: 18px;
+	}
+	
+	div.textcodeme p {
+		font-family: calibri;
+		color: #252525;
+		line-height: 23px;
+		font-size: 15px; 
+		text-align: justify;
+		/* padding: 0 80px 0 80px; */
+	}
 
 }
-
