--- a/css/girlseducation.css
+++ b/css/girlseducation.css
@@ -9,333 +9,826 @@ body {
 	background-image: url("../images/translogo.png");
 }
 
-header {
-	display: flex;
-	width: 100%;
-	height: 140px;
-	background-image: url("../images/translogo.png");
-	/* position: relative; */
 
-}
+div.girleducationwrapper {
 
-header img {
-	width: 100px;
+	width:318px;
 	height: auto;
-	/* position: absolute; */
-	margin-top: 20px;
-	margin-left: 20px;
-}
-
-header h1 {
-	position: absolute;
-	margin-left: 500px;
-	top: 50px; 
-	font-family: Exotc350 DmBd BT;
-	color: red;
-	font-size: 28px;
-	letter-spacing: 15px; 
-
-}
-
-#hminav a {
-	color: #fff;
-	background: #000033;
-	display: block;
-	/* height: 60px; */
-	font-family: Exotc350 Dmbd BT;
 	display: flex;
-	align-items: center;
 	justify-content: center;
-	text-decoration: none;
-	transition: background 0.45s;
-	padding: 14px 16px;
-}
-
-#hminav a:hover {
-	background: red;
-}
-
-#hminav ul {
-	list-style: none;
-	display: flex;
-}
-
-#hminav li {
-	width: 150%;
-	text-align: center; 
-	position: relative;
-}
-
-#hminav li:hover .submenu > li {	
-	display: block;
-	top: 0px;
-}
-
-.submenu li {
-	display: none;
-	position: absolute;
-	top: 0px;
-	text-align: left;
-}
-
-.submenu {
-	display: flex;
 	flex-direction: column;
-	position: absolute;
-	width: 100%;
-}
-
-.arrow {
-	font-size: 10px;
-	left: 6px;
-}
-
-div.firstpic {
-/*	position: relative;
-*/	display: flex;
-	/* margin-top: 40px; */
-	height: 730px;
-	width: 100%;
-	background-image: url("../images/picture.jpg");
-	background-repeat: no-repeat;
-	background-size: cover; 
-	/*border: solid 1px red;*/
-	flex-direction: column;
-	align-items: center; 
-
-
-}
-
-div.h1p {
-	display: flex;
-	flex-direction: column;
-	align-items: stretch;
-	justify-content: center;
-	/*border: solid 1px red;*/
-	background: rgba(38,38,38,0.5);
-	margin-top: 400px;
-	width: 1000px;
-	height: 200px;
-	margin-bottom: 50px
-
-
-}
-
-div.h1p h1 {
-	text-align: center;
-	font-size: 35px;
-	font-family: Exotc350 DmBd BT;
-	color: white;
-
-}
-div.h1p p {
-	text-align: center;
-	font-size: 30px; 
-	color: white;
-	font-family: ErasDemiITC;
-	line-height: 40px;
-}
-
-#learn {
-	font-family: Exotc350 DmBd BT;
-	font-size: 20px;
-	color: white;
-	font-weight: bolder;
-}
-
-div.methonav {
-	display: flex;
-	flex-flow: row no-wrap;
-	/*border: solid 1px red;*/
 	align-items: center;
-}
-
-div.methonav a {
-	color: white;
-	padding: 0px 8px;
-	font-family: calibri;
-	font-size: 16px;
-	text-decoration: none;
-	font-weight: bolder;
-	color: #ffcc00;
-	text-transform: uppercase;
-	border-right: solid 2px white;
-}
-
-#last {
-	border: none;
-}
-
-div.methonav a:hover {
-	text-decoration: underline;
-}
-
-div.girleducation {
-	width: 100%;
-	height: 1400px;
-	display: flex;
-	justify-content: space-around;
-	margin: 40px 0 40px 0;
 	/* border: 1px solid red; */
-}
-
+	padding: 20px 0 40px 0; 
+	margin: 0 auto;
+	}
+	
 div.pic1ge {
-	width: 20%;
-	height: 750px;
+	width: 55%;
+	height: 300px;
 	display: flex;
 	flex-direction: column;
 	/* border: 1px solid red; */
 	background-image: url("../images/pic1ge.jpg");
 	background-size: cover;
-
+	margin: 0 auto;
 
 }
 
-div.getext {
-	width: 60%;
+div.getext1 {
+	width: 80%;
 	height: auto;
 	display: flex;
 	flex-direction: column;
-	margin: 0 20px 0 20px;
 	/* border: 1px solid red; */
-
+	margin: 0 auto;
 
 }
 
-div.girleducation h1 {
-	font-size: 18px;
+div.getext1 h1 {
+	font-size: 23px;
 	font-family: calibri;
 	color: #000033; 
-	line-height: 15px;
+	/* line-height: 15px; */
 	/* border: 1px solid red; */
 	width: 200px;
 	margin: 10px 0 10px 0;
-
-
-
+	/* text-align: center; */
 }
-div.girleducation p {
-	font-size: 16px;
+
+div.getext1 h2 {
+	font-family: Exotc350 DmBd BT;
+	/* color: #252525; */
+	padding: 30px 0 10px 0;
+	color: #000033;
+	text-decoration: underline;
+}
+
+div.getext1 p {
+	font-size: 18px;
 	font-family: calibri;
 	/* padding: 8px 8px; */
 	/* background-color: #000033; */
 	line-height: 22px;
 	text-align: justify;
+	color:#404040;
 }
 
 div.pic2ge {
-	width: 20%;
-	height: 750px;
+	width: 55%;
+	height: 500px;
 	display: flex;
 	flex-direction: column;
 	/* border: 1px solid red; */
 	background-image: url("../images/pic2ge.jpg");
 	background-size: cover;
+	margin: 0 auto;
+
 
 } 
 
-
-footer {
-	/* display: flex; */
-	background: #252525;
-	height: 430px;
-	width: 100%;
-}
-
-div.footercontainer {
-	display: flex;
-	width: 1140px;
-	height: 354px;
-	margin: 0px 113px;
-	padding: 80px 15px 0px;
-	/* border: solid 1px red; */
-
-} 
-
-div.littleabout {
+div.text2 {
+	width: 80%;
+	height: auto;
 	display: flex;
 	flex-direction: column;
-	width: 285px;
-	height: 265px;
-	padding: 0px 15px;
-	/* border: solid 1px red; */
-	/* align-items: flex-start; */
+	/* border: 1px solid red; */
+	margin-top: 20px;
+	margin: 0 auto;
+	margin-bottom: 20px;
 
+
+
+}
+
+div.text2 h1 {
+	font-size: 23px;
+	font-family: calibri;
+	color: #000033; 
+	/* line-height: 15px; */
+	/* border: 1px solid red; */
+	width: 200px;
+	margin: 10px 0 10px 0;
+	/* text-align: center; */
+}
+
+div.text2 h2 {
+	font-family: Exotc350 DmBd BT;
+	/* color: #252525; */
+	padding: 30px 0 10px 0;
+	color: #000033;
+	text-decoration: underline;
+}
+
+div.text2 p {
+	font-size: 18px;
+	font-family: calibri;
+	/* padding: 8px 8px; */
+	/* background-color: #000033; */
+	line-height: 22px;
+	text-align: justify;
+	color:#404040;
+}
+
+@media (min-width: 320px) and (max-width: 479px) {
+	
+	div.girleducationwrapper {
+		width:478px;
+		height: auto;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		/* border: 1px solid red; */
+		padding: 20px 0 40px 0; 
+		margin: 0 auto;
+		}
+		
+	div.pic1ge {
+		width: 55%;
+		height: 350px;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		background-image: url("../images/pic1ge.jpg");
+		background-size: cover;
+	}
+	
+	div.getext1 {
+		width: 80%;
+		height: auto;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+	}
+	
+	div.getext1 h1 {
+		font-size: 23px;
+		font-family: calibri;
+		color: #000033; 
+		/* line-height: 15px; */
+		/* border: 1px solid red; */
+		width: 200px;
+		margin: 10px 0 10px 0;
+		/* text-align: center; */
 	}
 
-div.links {
-	/* display: flex; */
-	/* flex-direction: column; */
-	width: 285px;
-	height: 265px;
-	padding: 0px 15px;
-	/* border: solid 1px red; */
+		
+	div.getext1 h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+	}
+	
+	div.getext1 p {
+		font-size: 18px;
+		font-family: calibri;
+		/* padding: 8px 8px; */
+		/* background-color: #000033; */
+		line-height: 22px;
+		text-align: justify;
+		color:#404040;
+	}
+	
+	div.pic2ge {
+		width: 55%;
+		height: 750px;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		background-image: url("../images/pic2ge.jpg");
+		background-size: cover;
+	
+	} 
+
+	div.text2 {
+		width: 80%;
+		height: auto;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		margin-top: 20px;
+
+	}
+	
+	div.text2 h1 {
+		font-size: 23px;
+		font-family: calibri;
+		color: #000033; 
+		/* line-height: 15px; */
+		/* border: 1px solid red; */
+		width: 200px;
+		margin: 10px 0 10px 0;
+		/* text-align: center; */
+	}
+	
+	div.text2 h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+	}
+	
+	div.text2 p {
+		font-size: 18px;
+		font-family: calibri;
+		/* padding: 8px 8px; */
+		/* background-color: #000033; */
+		line-height: 22px;
+		text-align: justify;
+		color:#404040;
+}
 }
 
-div.downlogo {
-	display: flex;
-	flex-direction: column;
-	width: 285px;
-	height: 265px;
-	padding: 0px 15px;
-	/* border: solid 1px red; */
-	justify-content: center;
-	align-items: center;
+@media (min-width: 480px) and (max-width: 767px) {
+
+	div.girleducationwrapper {
+		width:766px;
+		height: auto;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		/* border: 1px solid red; */
+		padding: 20px 0 40px 0; 
+		margin: 0 auto;
+		}
+		
+	div.pic1ge {
+		width: 55%;
+		height: 600px;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		background-image: url("../images/pic1ge.jpg");
+		background-size: cover;
+	}
+	
+	div.getext1 {
+		width: 80%;
+		height: auto;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+	}
+	
+	div.getext1 h1 {
+		font-size: 23px;
+		font-family: calibri;
+		color: #000033; 
+		/* line-height: 15px; */
+		/* border: 1px solid red; */
+		width: 200px;
+		margin: 10px 0 10px 0;
+		/* text-align: center; */
+	}
+
+		
+	div.getext1 h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+	}
+	
+	div.getext1 p {
+		font-size: 18px;
+		font-family: calibri;
+		/* padding: 8px 8px; */
+		/* background-color: #000033; */
+		line-height: 25px;
+		text-align: justify;
+		color:#404040;
+	}
+	
+	div.pic2ge {
+		width: 55%;
+		height: 1200px;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		background-image: url("../images/pic2ge.jpg");
+		background-size: cover;
+	
+	} 
+
+	div.text2 {
+		width: 80%;
+		height: auto;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		margin-top: 20px;
+
+	}
+	
+	div.text2 h1 {
+		font-size: 23px;
+		font-family: calibri;
+		color: #000033; 
+		/* line-height: 15px; */
+		/* border: 1px solid red; */
+		width: 200px;
+		margin: 10px 0 10px 0;
+		/* text-align: center; */
+	}
+	
+	div.text2 h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+	}
+	
+	div.text2 p {
+		font-size: 18px;
+		font-family: calibri;
+		/* padding: 8px 8px; */
+		/* background-color: #000033; */
+		line-height: 22px;
+		text-align: justify;
+		color:#404040;
+}
 
 }
-footer img {
-	width: 200px;
-	height: auto;
+
+@media (min-width: 768px) and (max-width: 1023px) {
+
+	div.girleducationwrapper {
+		width:1022px;
+		height: auto;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		/* border: 1px solid red; */
+		padding: 20px 0 40px 0; 
+		margin: 0 auto;
+		}
+		
+	div.pic1ge {
+		width: 55%;
+		height: 800px;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		background-image: url("../images/pic1ge.jpg");
+		background-size: cover;
+		margin-top: 20px;
+	}
+	
+	div.getext1 {
+		width: 80%;
+		height: auto;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		margin-top: 20px;
+	}
+	
+	div.getext1 h1 {
+		font-size: 23px;
+		font-family: calibri;
+		color: #000033; 
+		/* line-height: 15px; */
+		/* border: 1px solid red; */
+		width: 200px;
+		margin: 10px 0 10px 0;
+		/* text-align: center; */
+	}
+
+		
+	div.getext1 h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+	}
+	
+	div.getext1 p {
+		font-size: 18px;
+		font-family: calibri;
+		/* padding: 8px 8px; */
+		/* background-color: #000033; */
+		line-height: 22px;
+		text-align: justify;
+		color:#404040;
+	}
+	
+	div.pic2ge {
+		width: 55%;
+		height: 1600px;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		background-image: url("../images/pic2ge.jpg");
+		background-size: cover;
+	
+	} 
+
+	div.text2 {
+		width: 80%;
+		height: auto;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		margin-top: 20px;
+
+	}
+	
+	div.text2 h1 {
+		font-size: 23px;
+		font-family: calibri;
+		color: #000033; 
+		/* line-height: 15px; */
+		/* border: 1px solid red; */
+		width: 200px;
+		margin: 10px 0 10px 0;
+		/* text-align: center; */
+	}
+	
+	div.text2 h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+	}
+	
+	div.text2 p {
+		font-size: 18px;
+		font-family: calibri;
+		/* padding: 8px 8px; */
+		/* background-color: #000033; */
+		line-height: 22px;
+		text-align: justify;
+		color:#404040;
 }
 
-div.contact {
-	display: flex;
-	flex-direction: column;
-	width: 285px;
-	height: 265px;
-	padding: 0px 15px;
-	/* border: solid 1px red; */
 }
 
-footer h1 {
-	font-family: Exotc350 DmBd BT;;
-	color: yellow;
-	font-size: 18px;
-	line-height: 40px;
-}
-footer a {
-	color: #e6e6e6;
-	font-family: calibri;
-	line-height: 25px;
-	font-size: 15px;
-	text-decoration: none;
+@media (min-width: 1024px) and (max-width: 1200px) {
+
+	div.girleducationwrapper {
+		width:1199px;
+		height: auto;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		/* border: 1px solid red; */
+		padding: 20px 0 40px 0; 
+		margin: 0 auto;
+		}
+		
+	div.pic1ge {
+		width: 55%;
+		height: 800px;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		background-image: url("../images/pic1ge.jpg");
+		background-size: cover;
+		margin-top: 20px;
+	}
+	
+	div.getext1 {
+		width: 80%;
+		height: auto;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		margin-top: 20px;
+	}
+	
+	div.getext1 h1 {
+		font-size: 23px;
+		font-family: calibri;
+		color: #000033; 
+		/* line-height: 15px; */
+		/* border: 1px solid red; */
+		width: 200px;
+		margin: 10px 0 10px 0;
+		/* text-align: center; */
+	}
+
+		
+	div.getext1 h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+	}
+	
+	div.getext1 p {
+		font-size: 18px;
+		font-family: calibri;
+		/* padding: 8px 8px; */
+		/* background-color: #000033; */
+		line-height: 22px;
+		text-align: justify;
+		color:#404040;
+	}
+	
+	div.pic2ge {
+		width: 55%;
+		height: 1900px;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		background-image: url("../images/pic2ge.jpg");
+		background-size: cover;
+	
+	} 
+
+	div.text2 {
+		width: 80%;
+		height: auto;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		margin-top: 20px;
+
+	}
+	
+	div.text2 h1 {
+		font-size: 23px;
+		font-family: calibri;
+		color: #000033; 
+		/* line-height: 15px; */
+		/* border: 1px solid red; */
+		width: 200px;
+		margin: 10px 0 10px 0;
+		/* text-align: center; */
+	}
+	
+	div.text2 h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+	}
+	
+	div.text2 p {
+		font-size: 18px;
+		font-family: calibri;
+		/* padding: 8px 8px; */
+		/* background-color: #000033; */
+		line-height: 22px;
+		text-align: justify;
+		color:#404040;
 }
 
-footer a:hover {
-	background: red;
 }
 
-footer li {
-	width: 255px;
-	border-bottom: solid 1px #333333;
-	list-style: none;
+@media (min-width: 1201px) and (max-width: 1366px) {
+
+	div.girleducationwrapper {
+		width:1365px;
+		height: auto;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		/* border: 1px solid red; */
+		padding: 20px 0 40px 0; 
+		margin: 0 auto;
+
+	}
+		
+	div.pic1ge {
+		width: 40%;
+		height: 700px;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		background-image: url("../images/pic1ge.jpg");
+		background-size: con;
+		/* background-repeat: no-repeat; */
+		margin: 0 auto;
+		/* background-position: center; */
+		margin-top: 20px;
+
+
+	}
+	
+	div.getext1 {
+		width: 80%;
+		height: auto;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		margin-top: 20px;
+	}
+	
+	div.getext1 h1 {
+		font-size: 23px;
+		font-family: calibri;
+		color: #000033; 
+		/* line-height: 15px; */
+		/* border: 1px solid red; */
+		width: 200px;
+		margin: 10px 0 10px 0;
+		/* text-align: center; */
+	}
+
+		
+	div.getext1 h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+	}
+	
+	div.getext1 p {
+		font-size: 18px;
+		font-family: calibri;
+		/* padding: 8px 8px; */
+		/* background-color: #000033; */
+		line-height: 22px;
+		text-align: justify;
+		color:#404040;
+	}
+	
+	div.pic2ge {
+		width: 40%;
+		height: 1500px;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		background-image: url("../images/pic2ge.jpg");
+		background-size: cover;
+		backg
+	} 
+
+	div.text2 {
+		width: 80%;
+		height: auto;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		margin-top: 20px;
+
+	}
+	
+	div.text2 h1 {
+		font-size: 23px;
+		font-family: calibri;
+		color: #000033; 
+		/* line-height: 15px; */
+		/* border: 1px solid red; */
+		width: 200px;
+		margin: 10px 0 10px 0;
+		/* text-align: center; */
+	}
+	
+	div.text2 h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+	}
+	
+	div.text2 p {
+		font-size: 18px;
+		font-family: calibri;
+		/* padding: 8px 8px; */
+		/* background-color: #000033; */
+		line-height: 22px;
+		text-align: justify;
+		color:#404040;
 }
 
-footer p {
-	color: #e6e6e6;
-	font-family: calibri;
-	text-align: left;
-	font-size: 15px;
-	line-height: 20px;
 }
 
-div.copy {
-	/* border: solid 1px red; */
-	width: 100%;
-	display: flex;
-	align-items: flex-end;
-	height: 70px;
-	justify-content: center;
+@media (min-width: 1366px) {
 
+	div.girleducationwrapper {
+		width:100%;
+		height: auto;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		/* border: 1px solid red; */
+		padding: 20px 0 40px 0; 
+		margin: 0 auto;
+
+	}
+		
+	div.pic1ge {
+		width: 40%;
+		height: 700px;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		background-image: url("../images/pic1ge.jpg");
+		background-size: con;
+		/* background-repeat: no-repeat; */
+		margin: 0 auto;
+		/* background-position: center; */
+		margin-top: 20px;
+
+
+	}
+	
+	div.getext1 {
+		width: 80%;
+		height: auto;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		margin-top: 20px;
+	}
+	
+	div.getext1 h1 {
+		font-size: 23px;
+		font-family: calibri;
+		color: #000033; 
+		/* line-height: 15px; */
+		/* border: 1px solid red; */
+		width: 200px;
+		margin: 10px 0 10px 0;
+		/* text-align: center; */
+	}
+
+		
+	div.getext1 h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+	}
+	
+	div.getext1 p {
+		font-size: 18px;
+		font-family: calibri;
+		/* padding: 8px 8px; */
+		/* background-color: #000033; */
+		line-height: 22px;
+		text-align: justify;
+		color:#404040;
+	}
+	
+	div.pic2ge {
+		width: 40%;
+		height: 1500px;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		background-image: url("../images/pic2ge.jpg");
+		background-size: cover;
+		backg
+	} 
+
+	div.text2 {
+		width: 80%;
+		height: auto;
+		display: flex;
+		flex-direction: column;
+		/* border: 1px solid red; */
+		margin-top: 20px;
+
+	}
+	
+	div.text2 h1 {
+		font-size: 23px;
+		font-family: calibri;
+		color: #000033; 
+		/* line-height: 15px; */
+		/* border: 1px solid red; */
+		width: 200px;
+		margin: 10px 0 10px 0;
+		/* text-align: center; */
+	}
+	
+	div.text2 h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+	}
+	
+	div.text2 p {
+		font-size: 18px;
+		font-family: calibri;
+		/* padding: 8px 8px; */
+		/* background-color: #000033; */
+		line-height: 22px;
+		text-align: justify;
+		color:#404040;
 }
 
+}
