--- a/css/health.css
+++ b/css/health.css
@@ -1,227 +1,57 @@
-*{
-	margin: 0px;
-	padding: 0px;
-	box-sizing: border-box;
-	/* border: solid 1px red;b */
-}
-
-body {
-	background-image: url("../images/translogo.png");
-}
-
-header {
-	display: flex;
-	width: 100%;
-	height: 140px;
-	background-image: url("../images/translogo.png");
-	/* position: relative; */
-
-}
-
-header img {
-	width: 100px;
-	height: auto;
-	/* position: absolute; */
-	margin-top: 20px;
-	margin-left: 20px;
-}
-
-header h1 {
-	position: absolute;
-	margin-left: 500px;
-	top: 50px; 
-	font-family: Exotc350 DmBd BT;
-	color: red;
-	font-size: 28px;
-	letter-spacing: 15px; 
-
-}
-
-#hminav a {
-	color: #fff;
-	background: #000033;
-	display: block;
-	/* height: 60px; */
-	font-family: Exotc350 Dmbd BT;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	text-decoration: none;
-	transition: background 0.45s;
-	padding: 14px 16px;
-}
-
-#hminav a:hover {
-	background: red;
-}
-
-#hminav ul {
-	list-style: none;
-	display: flex;
-}
-
-#hminav li {
-	width: 150%;
-	text-align: center; 
-	position: relative;
-}
-
-#hminav li:hover .submenu > li {	
-	display: block;
-	top: 0px;
-}
-
-.submenu li {
-	display: none;
-	position: absolute;
-	top: 0px;
-	text-align: left;
-}
-
-.submenu {
-	display: flex;
-	flex-direction: column;
-	position: absolute;
-	width: 100%;
-}
-
-.arrow {
-	font-size: 10px;
-	left: 6px;
-}
-
-div.firstpic {
-/*	position: relative;
-*/	display: flex;
-	/* margin-top: 40px; */
-	height: 730px;
-	width: 100%;
-	background-image: url("../images/picture.jpg");
-	background-repeat: no-repeat;
-	background-size: cover; 
-	/*border: solid 1px red;*/
-	flex-direction: column;
-	align-items: center; 
-
-
-}
-
-div.h1p {
-	display: flex;
-	flex-direction: column;
-	align-items: stretch;
-	justify-content: center;
-	/*border: solid 1px red;*/
-	background: rgba(38,38,38,0.5);
-	margin-top: 400px;
-	width: 1000px;
-	height: 200px;
-	margin-bottom: 50px
-
-
-}
-
-div.h1p h1 {
-	text-align: center;
-	font-size: 35px;
-	font-family: Exotc350 DmBd BT;
-	color: white;
-
-}
-div.h1p p {
-	text-align: center;
-	font-size: 30px; 
-	color: white;
-	font-family: ErasDemiITC;
-	line-height: 40px;
-}
-
-#learn {
-	font-family: Exotc350 DmBd BT;
-	font-size: 20px;
-	color: white;
-	font-weight: bolder;
-}
-
-div.methonav {
-	display: flex;
-	flex-flow: row no-wrap;
-	/*border: solid 1px red;*/
-	align-items: center;
-}
-
-div.methonav a {
-	color: white;
-	padding: 0px 8px;
-	font-family: calibri;
-	font-size: 16px;
-	text-decoration: none;
-	font-weight: bolder;
-	color: #ffcc00;
-	text-transform: uppercase;
-	border-right: solid 2px white;
-}
-
-#last {
-	border: none;
-}
-
-div.methonav a:hover {
-	text-decoration: underline;
-}
-
 div.communityhealth {
-	width:100%;
+	width:319px;
 	height: auto;
 	display: flex;
 	justify-content: center;
     flex-direction: column;
 	align-items: center;
 	/* border: 1px solid red; */
-	padding: 20px 0 40px 0; 
-
-
+	margin: 0 auto;
 }
 
 div.headingch {
 	display: flex;
 	/* border: 1px solid red; */
-	justify-content: flex-start;
+	justify-content: center;
 	align-items: center;
-	width: 950px;
-	
+	width: 60%;
+	flex-direction: column;
+	margin: 0 auto;
+	margin-top: 20px
 }
 
 div.headingch img {
-	width: 100px;
-	height: 100px;
-	margin-right: 220px;
+	width: 20%;
+	height: auto;
+	/* border: 1px solid red; */
 }
 
 div.headingch h1{
 	font-family: Calibri;
 	text-transform: uppercase;
+	text-align: center;
+	font-size: 20px;
 }
 div.pichealth {
-    width: 950px;
-    height: 650px;
+    width: 80%;
+    height: 200px;
 	background-image: url("../images/pichealth.jpg");
-	background-size: cover;
+	background-size: contain;
+	background-repeat: no-repeat;
 	background-position: center;
 	/* border: 1px solid red; */
 	display: flex;
 	justify-content: center;
-
+	margin: 0 auto;
 }
 
 div.bodych {
 	display: flex;
 	flex-direction: column;
-	width: 950px;
+	width: 70%;
 	height: auto;
-	/* border: 1px solid red; */
-	/* padding: 20px 200px 40px 200px;  */
-
+	margin: 0 auto;
+	margin-bottom: 20px
 }
 
 div.bodych h2 {
@@ -241,115 +71,536 @@ div.bodych p {
 	/* padding: 0 80px 0 80px; */
 }
 
-div.bodych img {
-	width: 100%;
-	height: auto;
-	padding: 30px 100px;
+div.picbodych {
+	width: 80%;
+    height: 200px;
+	background-image: url("../images/pic2ch.jpg");
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
 	/* border: 1px solid red; */
-
+	display: flex;
+	justify-content: center;
+	margin: 0 auto;
 }
 
-footer {
-	/* display: flex; */
-	background: #252525;
-	height: 430px;
-	width: 100%;
-}
+@media (min-width: 320px) and (max-width: 479px) {
 
-div.footercontainer {
-	display: flex;
-	width: 1140px;
-	height: 354px;
-	margin: 0px 113px;
-	padding: 80px 15px 0px;
-	/* border: solid 1px red; */
-
-} 
-
-div.littleabout {
-	display: flex;
-	flex-direction: column;
-	width: 285px;
-	height: 265px;
-	padding: 0px 15px;
-	/* border: solid 1px red; */
-	/* align-items: flex-start; */
-
+	div.communityhealth {
+		width: 478px;
+		height: auto;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		/* border: 1px solid red; */
+		/* padding: 20px 0 40px 0;  */
+		margin: 0 auto;
 	}
-
-div.links {
-	/* display: flex; */
-	/* flex-direction: column; */
-	width: 285px;
-	height: 265px;
-	padding: 0px 15px;
-	/* border: solid 1px red; */
+	
+	div.headingch {
+		display: flex;
+		/* border: 1px solid red; */
+		justify-content: center;
+		align-items: center;
+		width: 60%;
+		flex-direction: column
+	}
+	
+	div.headingch img {
+		width: 10%;
+		height: auto;
+	}
+	
+	div.headingch h1{
+		font-family: Calibri;
+		text-transform: uppercase;
+		text-align: center;
+		font-size: 20px
+	}
+	div.pichealth {
+		width: 80%;
+		height: 200px;
+		background-image: url("../images/pichealth.jpg");
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+	}
+	
+	div.bodych {
+		display: flex;
+		flex-direction: column;
+		width: 70%;
+		height: auto;
+		/* border: 1px solid red; */
+	}
+	
+	div.bodych h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+	}
+	
+	div.bodych p {
+		font-family: calibri;
+		color: #252525;
+		line-height: 22px;
+		font-size: 17px; 
+		text-align: justify;
+		/* padding: 0 80px 0 80px; */
+	}
+	
+	div.picbodych {
+		width: 80%;
+		height: 200px;
+		background-image: url("../images/pic2ch.jpg");
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+		margin: 0 auto;
+	}
 }
 
-div.downlogo {
-	display: flex;
-	flex-direction: column;
-	width: 285px;
-	height: 265px;
-	padding: 0px 15px;
-	/* border: solid 1px red; */
-	justify-content: center;
-	align-items: center;
+@media (min-width: 480px) and (max-width: 767px) {
 
-}
-footer img {
-	width: 200px;
-	height: auto;
+	div.communityhealth {
+		width: 766px;
+		height: auto;
+		display: flex;
+		/* justify-content: center; */
+		flex-direction: column;
+		align-items: center;
+		/* border: 1px solid red; */
+		/* padding: 20px 0 40px 0;  */
+		margin: 0 auto;
+	}
+	
+	div.headingch {
+		display: flex;
+		/* border: 1px solid red; */
+		justify-content: center;
+		align-items: center;
+		width: 60%;
+		flex-direction: column
+	}
+	
+	div.headingch img {
+		width: 10%;
+		height: auto;
+	}
+	
+	div.headingch h1{
+		font-family: Calibri;
+		text-transform: uppercase;
+		text-align: center;
+		font-size: 20px
+	}
+	div.pichealth {
+		width: 80%;
+		height: 300px;
+		background-image: url("../images/pichealth.jpg");
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+	}
+	
+	div.bodych {
+		display: flex;
+		flex-direction: column;
+		width: 70%;
+		height: auto;
+		/* border: 1px solid red; */
+	}
+	
+	div.bodych h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+	}
+	
+	div.bodych p {
+		font-family: calibri;
+		color: #252525;
+		line-height: 22px;
+		font-size: 17px; 
+		text-align: justify;
+		/* padding: 0 80px 0 80px; */
+	}
+	
+	div.picbodych {
+		width: 80%;
+		height: 300px;
+		background-image: url("../images/pic2ch.jpg");
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+		margin: 0 auto;
+	}
 }
 
-div.contact {
-	display: flex;
-	flex-direction: column;
-	width: 285px;
-	height: 265px;
-	padding: 0px 15px;
-	/* border: solid 1px red; */
+@media (min-width: 768px) and (max-width: 1023px) {
+
+	div.communityhealth {
+		width: 1022px;
+		height: auto;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		/* border: 1px solid red; */
+		margin: 0 auto;
+	}
+	
+	div.headingch {
+		display: flex;
+		/* border: 1px solid red; */
+		justify-content: center;
+		align-items: center;
+		width: 60%;
+		flex-direction: row;
+		height: 100px;
+	}
+	
+	div.headingch img {
+		width: 10%;
+		height: auto;
+		padding: 10px;
+	}
+	
+	div.headingch h1{
+		font-family: Calibri;
+		text-transform: uppercase;
+		text-align: center;
+		font-size: 30px
+	}
+	div.pichealth {
+		width: 80%;
+		height: 400px;
+		background-image: url("../images/pichealth.jpg");
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+	}
+	
+	div.bodych {
+		display: flex;
+		flex-direction: column;
+		width: 70%;
+		height: auto;
+		/* border: 1px solid red; */
+	}
+	
+	div.bodych h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+	}
+	
+	div.bodych p {
+		font-family: calibri;
+		color: #252525;
+		line-height: 22px;
+		font-size: 17px; 
+		text-align: justify;
+		/* padding: 0 80px 0 80px; */
+	}
+	
+	div.picbodych {
+		width: 80%;
+		height: 300px;
+		background-image: url("../images/pic2ch.jpg");
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+		margin: 0 auto;
+	}
+	
 }
 
-footer h1 {
-	font-family: Exotc350 DmBd BT;;
-	color: yellow;
-	font-size: 18px;
-	line-height: 40px;
-}
-footer a {
-	color: #e6e6e6;
-	font-family: calibri;
-	line-height: 25px;
-	font-size: 15px;
-	text-decoration: none;
+@media (min-width: 1024px) and (max-width: 1200px) {
+
+	div.communityhealth {
+		width: 1199px;
+		height: auto;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		/* border: 1px solid red; */
+		margin: 0 auto;
+	}
+	
+	div.headingch {
+		display: flex;
+		/* border: 1px solid red; */
+		justify-content: center;
+		align-items: center;
+		width: 60%;
+		flex-direction: row;
+		height: 100px;
+	}
+	
+	div.headingch img {
+		width: 15%;
+		height: auto;
+		padding: 10px;
+	}
+	
+	div.headingch h1{
+		font-family: Calibri;
+		text-transform: uppercase;
+		text-align: center;
+		font-size: 30px
+	}
+	div.pichealth {
+		width: 80%;
+		height: 500px;
+		background-image: url("../images/pichealth.jpg");
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+	}
+	
+	div.bodych {
+		display: flex;
+		flex-direction: column;
+		width: 70%;
+		height: auto;
+		/* border: 1px solid red; */
+		/* padding: 20px 200px 40px 200px;  */
+	
+	}
+	
+	div.bodych h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+	}
+	
+	div.bodych p {
+		font-family: calibri;
+		color: #252525;
+		line-height: 22px;
+		font-size: 17px; 
+		text-align: justify;
+		/* padding: 0 80px 0 80px; */
+	}
+	
+	div.picbodych {
+		width: 80%;
+		height: 400px;
+		background-image: url("../images/pic2ch.jpg");
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+		margin: 0 auto;
+	}
+	
 }
 
-footer a:hover {
-	background: red;
+@media (min-width: 1201px) and (max-width: 1366px) {
+
+	div.communityhealth {
+		width: 1365px;
+		height: auto;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		/* border: 1px solid red; */
+		margin: 0 auto;
+	}
+	
+	div.headingch {
+		display: flex;
+		/* border: 1px solid red; */
+		justify-content: center;
+		align-items: center;
+		width: 60%;
+		flex-direction: row;
+		height: 150px;
+	}
+	
+	div.headingch img {
+		width: 10%;
+		height: auto;
+		padding: 10px;
+	}
+	
+	div.headingch h1{
+		font-family: Calibri;
+		text-transform: uppercase;
+		text-align: center;
+		font-size: 30px
+	}
+	div.pichealth {
+		width: 80%;
+		height: 600px;
+		background-image: url("../images/pichealth.jpg");
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+	}
+	
+	div.bodych {
+		display: flex;
+		flex-direction: column;
+		width: 70%;
+		height: auto;
+		/* border: 1px solid red; */
+	}
+	
+	div.bodych h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+	}
+	
+	div.bodych p {
+		font-family: calibri;
+		color: #252525;
+		line-height: 22px;
+		font-size: 17px; 
+		text-align: justify;
+		/* padding: 0 80px 0 80px; */
+	}
+	
+	div.picbodych {
+		width: 80%;
+		height: 500px;
+		background-image: url("../images/pic2ch.jpg");
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+		margin: 0 auto;
+		margin-bottom:  20px;
+	}
+	
 }
 
-footer li {
-	width: 255px;
-	border-bottom: solid 1px #333333;
-	list-style: none;
-}
+@media (min-width: 1367px) {
 
-footer p {
-	color: #e6e6e6;
-	font-family: calibri;
-	text-align: left;
-	font-size: 15px;
-	line-height: 20px;
-}
-
-div.copy {
-	/* border: solid 1px red; */
-	width: 100%;
-	display: flex;
-	align-items: flex-end;
-	height: 70px;
-	justify-content: center;
-
-}
-
+	div.communityhealth {
+		width: 100%;
+		height: auto;
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		/* border: 1px solid red; */
+		margin: 0 auto;
+	}
+	
+	div.headingch {
+		display: flex;
+		/* border: 1px solid red; */
+		justify-content: center;
+		align-items: center;
+		width: 60%;
+		flex-direction: row;
+		height: 150px;
+	}
+	
+	div.headingch img {
+		width: 10%;
+		height: auto;
+		padding: 10px;
+	}
+	
+	div.headingch h1{
+		font-family: Calibri;
+		text-transform: uppercase;
+		text-align: center;
+		font-size: 30px
+	}
+	div.pichealth {
+		width: 80%;
+		height: 600px;
+		background-image: url("../images/pichealth.jpg");
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+	}
+	
+	div.bodych {
+		display: flex;
+		flex-direction: column;
+		width: 70%;
+		height: auto;
+		/* border: 1px solid red; */
+	}
+	
+	div.bodych h2 {
+		font-family: Exotc350 DmBd BT;
+		/* color: #252525; */
+		padding: 30px 0 10px 0;
+		color: #000033;
+		text-decoration: underline;
+	}
+	
+	div.bodych p {
+		font-family: calibri;
+		color: #252525;
+		line-height: 22px;
+		font-size: 17px; 
+		text-align: justify;
+		/* padding: 0 80px 0 80px; */
+	}
+	
+	div.picbodych {
+		width: 80%;
+		height: 500px;
+		background-image: url("../images/pic2ch.jpg");
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center;
+		/* border: 1px solid red; */
+		display: flex;
+		justify-content: center;
+		margin: 0 auto;
+		margin-bottom:  20px;
+	}
+	
