--- a/css/index.css
+++ b/css/index.css
@@ -3567,11 +3567,11 @@ div.h1p {
 	div#picwhowe {
 		background-image: url("../images/pic2.jpg");
 		background-position: center;
-		background-siz e: cover;
+		background-size: cover;
 		/* background-repeat: no-repeat; */
 		width: 100%;
 		height: 450px;
-		border: solid 1px red;
+		/* border: solid 1px red; */
 		margin: 0 auto;
 		margin: 8px;
 	
@@ -4028,3 +4028,4 @@ div.h1p {
 	div.health a {
 		margin: 10px 0;
 	}
+}
